Java 8 and Spring 2.x.x adaptation